# bindantic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  pyproject.toml
bindantic/: __init__.py  _base_model.py  _base_types.py  _base_types_validation.py  acl_block.py  controls_block.py  dnssec_policy_block.py  http_block.py  key_block.py  logging_block.py  named_config.py  options_block.py  remote_servers_block.py  server_block.py  statistics_channels_block.py  tls_block.py  trust_anchors_block.py  view_block.py  zone_block.py  zone_block_resource_records.py
examples/: manual_example.py
examples/bind_example/: named.conf
examples/bind_example/dnssec/: dnssec-policies.conf  trust-anchors.conf
examples/bind_example/keys/: key-stores.conf  tsig-keys.conf
examples/bind_example/zones/: example.com.zone  reverse.zone
tests/unit/: test__base_models.py  test__base_types_validation.py  test_acl_block.py  test_controls_block.py  test_dnssec_policy_block.py  test_http_block.py  test_key_block.py  test_logging_block.py  test_named_config.py  test_options_block.py  test_remote_servers_block.py  test_server_block.py  test_statistics_channels_block.py  test_tls_block.py  test_trust_anchors_block.py  test_view_block.py  test_zone_block.py  test_zone_block_resource_records.py
