[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=68.0.0",
    "wheel>=0.40.0",
]

[project]
name = "bindantic"
version = "0.9.0"
description = "Pydantic-based BIND9 configuration management library"
authors = [
    {name = "Daniil Gruzdev", email = "gruzdev.daniil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["bind", "bind9", "dns", "pydantic", "configuration", "named", "named.conf"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.12.5,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/DVSAWR/bindantic"
"Issue Tracker" = "https://github.com/DVSAWR/bindantic/issues"

[tool.setuptools]
include-package-data = true
packages = ["bindantic"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = [
    "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "pydantic_extra_types.*"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "RET",
    "SIM",
    "PL",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "PLR0913",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = [
    "S101",
    "PLR2004",
]

[tool.ruff.lint.isort]
known-first-party = ["bindantic"]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["bindantic"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]